# LTE-GNU-Radio-Code

./: README.md
GNU-Radio-Repositories/: ofdm_chain.grc  ofdm_chain.py
GNU-Radio-Repositories/LEGACY/gr-ofdm-rx/docs/: README.OFDMReceiver
GNU-Radio-Repositories/LEGACY/gr-ofdm-rx/examples/: RxReceiver_Diag.grc
GNU-Radio-Repositories/LEGACY/gr-ofdm-rx/grc/: CMakeLists.txt  OFDMReceiver_BitRecovery.block.yml  OFDMReceiver_Bit_Recovery.block.yml  OFDMReceiver_SynchAndChanEst.block.yml  OFDMReceiver_SynchEstAndFO.block.yml  OFDMReceiver_SynchEstFOAndDSSS.block.yml  OFDMReceiver_SynchronizeAndEstimate.block.yml  OFDMReceiver_bit_recovery_c.block.yml
GNU-Radio-Repositories/LEGACY/gr-ofdm-rx/python/: qa_BitRecovery.py
GNU-Radio-Repositories/LEGACY/gr-ofdm-tx/: CMakeLists.txt
GNU-Radio-Repositories/LEGACY/gr-ofdm-tx/python/: OFDMTransmitter.py  tx_data_0.pckl
GNU-Radio-Repositories/LEGACY/gr-ofdm-tx/swig/: CMakeLists.txt
GNU-Radio-Repositories/TEST/GNU_RADIO_OFFLINE/: TXRX_Parameters.py  channel_estimate.py  find_synch_index.py  pls_aio.py  pls_receiver.py  pls_transmitter.py  rx_process.py  synch_and_chan_est.py  synch_and_chan_est_new.py  topblock.py  tx_data_offline.pckl  tx_data_online.pckl
GNU-Radio-Repositories/TEST/GNU_RADIO_OFFLINE/Data/: tx_bit_data_chan_type_Fading_SNR_100.pckl  tx_data_offline_chan_type_Fading_SNR_100.pckl  tx_data_online_chan_type_Fading_SNR_100.pckl
GNU-Radio-Repositories/TEST/GNU_RADIO_OFFLINE/Output/: 2021_03_03_18h_15m_output_data.pckl  _output_data.pckl
GNU-Radio-Repositories/TEST/gr-Test/: CMakeLists.txt  MANIFEST.md
GNU-Radio-Repositories/TEST/gr-Test/docs/: CMakeLists.txt
GNU-Radio-Repositories/TEST/gr-Test/grc/: CMakeLists.txt  Test_testtest.block.yml
GNU-Radio-Repositories/TEST/gr-Test/python/: CMakeLists.txt  __init__.py  testtest.py
GNU-Radio-Repositories/gr-RXOFDM/: CMakeLists.txt  MANIFEST.md  ofdm_chain.grc
GNU-Radio-Repositories/gr-RXOFDM/apps/: CMakeLists.txt
GNU-Radio-Repositories/gr-RXOFDM/cmake/Modules/: RXOFDMConfig.cmake
GNU-Radio-Repositories/gr-RXOFDM/docs/: CMakeLists.txt  README.RXOFDM
GNU-Radio-Repositories/gr-RXOFDM/docs/doxygen/: CMakeLists.txt  Doxyfile.in
GNU-Radio-Repositories/gr-RXOFDM/grc/: CMakeLists.txt  RXOFDM_synch_and_chan_est.block.yml
GNU-Radio-Repositories/gr-RXOFDM/include/RXOFDM/: CMakeLists.txt  api.h
GNU-Radio-Repositories/gr-RXOFDM/python/: CMakeLists.txt  __init__.py  synch_and_chan_est.py
GNU-Radio-Repositories/gr-RXOFDM/python/bindings/: CMakeLists.txt  python_bindings.cc
GNU-Radio-Repositories/gr-TXOFDM/: CMakeLists.txt  MANIFEST.md
GNU-Radio-Repositories/gr-TXOFDM/apps/: CMakeLists.txt
GNU-Radio-Repositories/gr-TXOFDM/cmake/Modules/: TXOFDMConfig.cmake
GNU-Radio-Repositories/gr-TXOFDM/docs/: CMakeLists.txt  README.TXOFDM
GNU-Radio-Repositories/gr-TXOFDM/docs/doxygen/: CMakeLists.txt  Doxyfile.in
GNU-Radio-Repositories/gr-TXOFDM/grc/: CMakeLists.txt  TXOFDM_tx_signal_transmitter.block.yml
GNU-Radio-Repositories/gr-TXOFDM/include/TXOFDM/: CMakeLists.txt  api.h
GNU-Radio-Repositories/gr-TXOFDM/python/: CMakeLists.txt  __init__.py  tx_signal_transmitter.py
GNU-Radio-Repositories/gr-TXOFDM/python/bindings/: CMakeLists.txt  python_bindings.cc
GNU-Radio-Repositories/gr-ofdm-rx/: CMakeLists.txt  MANIFEST.md
GNU-Radio-Repositories/gr-ofdm-rx/cmake/Modules/: OFDMReceiverConfig.cmake
GNU-Radio-Repositories/gr-ofdm-rx/docs/doxygen/: Doxyfile.in
GNU-Radio-Repositories/gr-ofdm-rx/examples/: top_block.py
GNU-Radio-Repositories/gr-ofdm-rx/grc/: CMakeLists.txt  OFDMReceiver_BitRecovery.xml  OFDMReceiver_Bit_Recovery.xml  OFDMReceiver_SynchAndChanEst.xml  OFDMReceiver_SynchEstAndFO.xml  OFDMReceiver_SynchEstFOAndDSSS.xml  OFDMReceiver_SynchronizeAndEstimate.xml  OFDMReceiver_bit_recovery_c.xml
GNU-Radio-Repositories/gr-ofdm-rx/lib/: CMakeLists.txt  qa_OFDMReceiver.cc  qa_OFDMReceiver.h  test_OFDMReceiver.cc
GNU-Radio-Repositories/gr-ofdm-rx/python/: BitRecovery.py  Bit_Recovery.py  CMakeLists.txt  PickleCheck.py  SynchAndChanEst.py  SynchEstAndFO.py  SynchEstFOAndDSSS.py  SynchronizeAndEstimate.py  bit_recovery_c.py  qa_SynchAndChanEst.py  qa_SynchEstAndFO.py  qa_SynchronizeAndEstimate.py
GNU-Radio-Repositories/gr-ofdm-rx/python/txrx_mod/: MultiAntennaSystem.py  OFDM.py  RxBasebandSystem.py  SDRScript.py  SynchSignal.py  SystemModel.py
GNU-Radio-Repositories/gr-ofdm-rx/swig/: CMakeLists.txt  OFDMReceiver_swig.i
GNU-Radio-Repositories/gr-ofdm-tx/: CMakeLists.txt  MANIFEST.md
GNU-Radio-Repositories/gr-ofdm-tx/cmake/Modules/: OFDMTransmitterConfig.cmake
GNU-Radio-Repositories/gr-ofdm-tx/docs/: README.OFDMTransmitter
GNU-Radio-Repositories/gr-ofdm-tx/docs/doxygen/: Doxyfile.in
GNU-Radio-Repositories/gr-ofdm-tx/grc/: CMakeLists.txt  OFDMTransmitter_OFDMTransmitter.block.yml  OFDMTransmitter_OFDMTransmitter.xml  OFDMTransmitter_OFDMTxWithTimer.block.yml  OFDMTransmitter_OFDMTxWithTimer.xml  OFDMTransmitter_SimpleTx.block.yml  OFDMTransmitter_SimpleTx.xml  RXtransmit_6.grc
GNU-Radio-Repositories/gr-ofdm-tx/include/OFDMTransmitter/: CMakeLists.txt  api.h
GNU-Radio-Repositories/gr-ofdm-tx/lib/: CMakeLists.txt  qa_OFDMTransmitter.cc  qa_OFDMTransmitter.h  test_OFDMTransmitter.cc
GNU-Radio-Repositories/gr-ofdm-tx/python/: CMakeLists.txt  OFDMTxWithTimer.py  SimpleTx.py  __init__.py  qa_OFDMTxWithTimer.py
GNU-Radio-Repositories/gr-ofdm-tx/swig/: OFDMTransmitter_swig.i
GNU-Radio-Repositories/gr-utsa_ofdm/: CMakeLists.txt  MANIFEST.md
GNU-Radio-Repositories/gr-utsa_ofdm/apps/: CMakeLists.txt
GNU-Radio-Repositories/gr-utsa_ofdm/docs/: CMakeLists.txt  README.utsa_ofdm
GNU-Radio-Repositories/gr-utsa_ofdm/grc/: CMakeLists.txt  utsa_ofdm_SynchAndChanEst.block.yml  utsa_ofdm_TxSignalTransmitter.block.yml
GNU-Radio-Repositories/gr-utsa_ofdm/python/: CMakeLists.txt  SynchAndChanEst.py  TxSignalTransmitter.py  __init__.py
gr-Test/apps/: CMakeLists.txt
gr-Test/docs/doxygen/: CMakeLists.txt
gr-Test/include/Test/: api.h
gr-Test/python/: CMakeLists.txt  __init__.py
gr-Test/python/bindings/: CMakeLists.txt  python_bindings.cc
(+33 files in other folders)
